--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "38a02b47-8d5e-4a51-9448-3e24a9656cf9",
    "metadata": {},
    "source": [
     "# Get backend information with Qiskit\n",
@@ -12,7 +11,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1af5ab76-c979-4908-b292-18aeb86fbdd3",
    "metadata": {},
    "source": [
     "## List backends\n",
@@ -23,16 +21,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "859739b7-df70-43ed-8074-ac40874103e1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<IBMBackend('ibm_brisbane')>,\n",
-       " <IBMBackend('ibm_kyoto')>,\n",
-       " <IBMBackend('ibm_osaka')>,\n",
-       " <IBMBackend('ibm_sherbrooke')>]"
+       "[<IBMBackend('ibm_sherbrooke')>,\n",
+       " <IBMBackend('ibm_kyiv')>,\n",
+       " <IBMBackend('ibm_brisbane')>]"
       ]
      },
      "execution_count": 1,
@@ -50,7 +46,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a529ca05-2e7f-4cfb-8593-7fcf16605df9",
    "metadata": {},
    "source": [
     "The [`QiskitRuntimeService.backend()`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#backend) method (note that this is singular: *backend*) takes the name of the backend as the input parameter and returns an [`IBMBackend`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.IBMBackend) instance representing that particular backend:"
@@ -59,13 +54,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3fe0e47c-0909-452f-9fac-725013f7cc15",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<IBMBackend('ibm_kyoto')>"
+       "<IBMBackend('ibm_brisbane')>"
       ]
      },
      "execution_count": 2,
@@ -74,12 +68,11 @@
     }
    ],
    "source": [
-    "service.backend(\"ibm_kyoto\")"
+    "service.backend(\"ibm_brisbane\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "42f5a826-9769-438f-9006-32e652ad5c92",
    "metadata": {},
    "source": [
     "## Filter backends\n",
@@ -96,16 +89,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "35a0fe0e-9f5d-4839-a550-00f7ffef20ea",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<IBMBackend('ibm_brisbane')>,\n",
-       " <IBMBackend('ibm_kyoto')>,\n",
-       " <IBMBackend('ibm_osaka')>,\n",
-       " <IBMBackend('ibm_sherbrooke')>]"
+       "[<IBMBackend('ibm_sherbrooke')>,\n",
+       " <IBMBackend('ibm_kyiv')>,\n",
+       " <IBMBackend('ibm_brisbane')>]"
       ]
      },
      "execution_count": 3,
@@ -119,7 +110,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39ae720d-6073-47fe-9bfa-c755dfe9e22f",
    "metadata": {},
    "source": [
     "Use these keyword arguments to filter by any attribute in backend configuration ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_configuration_schema.json)) or status ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_status_schema.json)). A similar method is [`QiskitRuntimeService.least_busy()`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#least_busy), which takes the same filters as `backends()` but returns the backend that matches the filters and has the least number of jobs pending in the queue:"
@@ -128,13 +118,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "52dac71b-f57c-4482-bc5b-50172014cfd1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<IBMBackend('ibm_kyoto')>"
+       "<IBMBackend('ibm_sherbrooke')>"
       ]
      },
      "execution_count": 4,
@@ -148,7 +137,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa6be8fe-fef8-4652-99f8-ebe5948982d8",
    "metadata": {},
    "source": [
     "## Static backend information\n",
@@ -161,14 +149,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f894f518-98ed-40cd-97f4-1780c06be244",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name: ibm_kyoto\n",
+      "Name: ibm_sherbrooke\n",
       "Version: 2\n",
       "No. of qubits: 127\n",
       "\n"
@@ -176,7 +163,7 @@
     }
    ],
    "source": [
-    "backend = service.backend(\"ibm_kyoto\")\n",
+    "backend = service.backend(\"ibm_sherbrooke\")\n",
     "\n",
     "print(\n",
     "    f\"Name: {backend.name}\\n\"\n",
@@ -187,7 +174,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7832d222-86c7-4412-8d33-edaac4e27524",
    "metadata": {},
    "source": [
     "For a full list of attributes, see the [`IBMBackend` API documentation](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.IBMBackend)."
@@ -195,7 +181,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5f675a5-f295-4d80-87f4-2b48af34d234",
    "metadata": {},
    "source": [
     "## Dynamic backend information\n",
@@ -211,13 +196,12 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7aaf40eb-3073-42d8-9764-e42747368b95",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "QubitProperties(t1=0.00021820943371845535, t2=3.550558178347267e-05, frequency=4908335537.245392)"
+       "QubitProperties(t1=0.0002648987050342707, t2=0.00022849632444269408, frequency=4635662846.425661)"
       ]
      },
      "execution_count": 6,
@@ -231,7 +215,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6d716f5-aeed-4aba-ae59-a9672965a6fe",
    "metadata": {},
    "source": [
     "### Instruction properties\n",
@@ -242,13 +225,12 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0eb87c44-57b2-4b90-8458-8e2f813a657d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "InstructionProperties(duration=6.6e-07, error=0.023331762427963698, calibration=PulseQobj)"
+       "InstructionProperties(duration=5.333333333333332e-07, error=0.0060208139584001785, calibration=PulseQobj)"
       ]
      },
      "execution_count": 7,
@@ -262,7 +244,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69b65568-2931-4cbd-932b-8b6135a9820b",
    "metadata": {},
    "source": [
     "The following cell shows the properties for a measurement operation (including the readout error) on qubit 0."
@@ -271,13 +252,12 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "178ec9a9-dc95-4876-9a68-1fab621aa37a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "InstructionProperties(duration=1.4e-06, error=0.20189999999999997, calibration=PulseQobj)"
+       "InstructionProperties(duration=1.2444444444444443e-06, error=0.0032999999999999696, calibration=PulseQobj)"
       ]
      },
      "execution_count": 8,
@@ -291,7 +271,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36a47004-69d0-4af6-83b3-0e5e1247b5bf",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -306,7 +285,7 @@
  "metadata": {
   "description": "Find and filter available backends, get configuration and calibration data programmatically.",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -320,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.12.2"
   },
   "title": "Get backend information with Qiskit"
  },
