--- a/docs/guides/get-qpu-information.ipynb
+++ b/docs/guides/get-qpu-information.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "cb8aed01-2218-4524-b769-94e3f481b25f",
    "metadata": {},
    "source": [
     "# Get backend information with Qiskit\n",
@@ -11,6 +12,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "915e21a1-edd8-40a8-a230-2105a024b81c",
    "metadata": {},
    "source": [
     "## List backends\n",
@@ -21,14 +23,15 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "1dfa3af8-686d-420c-8b58-b8e687816fec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<IBMBackend('ibm_sherbrooke')>,\n",
-       " <IBMBackend('ibm_kyiv')>,\n",
-       " <IBMBackend('ibm_brisbane')>]"
+       "[<IBMBackend('ibm_brisbane')>,\n",
+       " <IBMBackend('ibm_sherbrooke')>,\n",
+       " <IBMBackend('ibm_kyiv')>]"
       ]
      },
      "execution_count": 1,
@@ -46,6 +49,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2e3a18e2-1130-4fb6-a57d-d7226b4268b7",
    "metadata": {},
    "source": [
     "The [`QiskitRuntimeService.backend()`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#backend) method (note that this is singular: *backend*) takes the name of the backend as the input parameter and returns an [`IBMBackend`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.IBMBackend) instance representing that particular backend:"
@@ -54,6 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "25a40e79-a494-40e6-9558-17f4418a0efc",
    "metadata": {},
    "outputs": [
     {
@@ -73,6 +78,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3ba97c22-330f-4eed-8e44-e538f94c2974",
    "metadata": {},
    "source": [
     "## Filter backends\n",
@@ -89,14 +95,15 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "dbadd7dd-1272-4973-9ad8-5fd5a40ea008",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<IBMBackend('ibm_sherbrooke')>,\n",
-       " <IBMBackend('ibm_kyiv')>,\n",
-       " <IBMBackend('ibm_brisbane')>]"
+       "[<IBMBackend('ibm_brisbane')>,\n",
+       " <IBMBackend('ibm_sherbrooke')>,\n",
+       " <IBMBackend('ibm_kyiv')>]"
       ]
      },
      "execution_count": 3,
@@ -110,6 +117,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b2d15581-56d8-4719-8e35-a8cbf0abd0c3",
    "metadata": {},
    "source": [
     "Use these keyword arguments to filter by any attribute in backend configuration ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_configuration_schema.json)) or status ([JSON schema](https://github.com/Qiskit/ibm-quantum-schemas/blob/main/schemas/backend_status_schema.json)). A similar method is [`QiskitRuntimeService.least_busy()`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#least_busy), which takes the same filters as `backends()` but returns the backend that matches the filters and has the least number of jobs pending in the queue:"
@@ -118,6 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "061ef5dc-cd72-4f7a-b4a0-c7cbaffd4169",
    "metadata": {},
    "outputs": [
     {
@@ -137,6 +146,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4dc42491-6a03-4e49-bd26-905187edd45b",
    "metadata": {},
    "source": [
     "## Static backend information\n",
@@ -149,6 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "7c963d4f-9792-4d76-97c8-93aa95c6f791",
    "metadata": {},
    "outputs": [
     {
@@ -174,6 +185,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cf5b994a-2434-43df-8e37-c063f1fbe3ce",
    "metadata": {},
    "source": [
     "For a full list of attributes, see the [`IBMBackend` API documentation](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.IBMBackend)."
@@ -181,6 +193,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fe84b143-8a73-4bd9-b6a4-b3a023e72964",
    "metadata": {},
    "source": [
     "## Dynamic backend information\n",
@@ -196,6 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "f1a82580-cd98-4654-94d2-eec8ccc9f7ad",
    "metadata": {},
    "outputs": [
     {
@@ -215,6 +229,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f96efd0b-3d35-4ab5-b7b1-ef182c6eed31",
    "metadata": {},
    "source": [
     "### Instruction properties\n",
@@ -225,6 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "582de91f-62b4-464c-b9c8-f84af948a06a",
    "metadata": {},
    "outputs": [
     {
@@ -244,6 +260,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d5da7085-163f-4cdc-930a-4fc00832480a",
    "metadata": {},
    "source": [
     "The following cell shows the properties for a measurement operation (including the readout error) on qubit 0."
@@ -252,6 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "f6b9e34e-2ef7-4340-8e33-828dd18c8e9d",
    "metadata": {},
    "outputs": [
     {
@@ -271,6 +289,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2385a454-d097-4f63-925f-8609433f3bd7",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -285,7 +304,7 @@
  "metadata": {
   "description": "Find and filter available backends, get configuration and calibration data programmatically.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -299,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3"
   },
   "title": "Get backend information with Qiskit"
  },
