--- a/docs/guides/online-lab-environments.mdx
+++ b/docs/guides/online-lab-environments.mdx
@@ -16,7 +16,7 @@ Additional online Jupyter notebook environments like IBM Watson&reg; Studio, Goo
 
 ### OVH Cloud AI notebooks
 
-Users of OVHcloud Public Cloud and OVHcloud Startup can now leverage their OVHcloud quantum notebooks to access Qiskit and submit jobs to IBM Quantum hardware with their IBM Quantum or IBM Cloud&reg; account. To learn more, visit the [OVHcloud Documentation and tutorials](https://help.ovhcloud.com/csm/world-documentation?id=kb_home) page.
+OVHcloud Public Cloud and OVHcloud Startup users can use their OVHcloud quantum notebooks to access Qiskit and submit jobs to IBM Quantum hardware with their IBM Quantum or IBM Cloud&reg; account. To learn more, visit the [OVHcloud Documentation and tutorials](https://help.ovhcloud.com/csm/world-documentation?id=kb_home) page.
 
 <Admonition type="note">
 OVHcloud AI notebooks are not available in some regions, such as the United States. Additionally, user interfaces might look different in different regions.
@@ -31,12 +31,12 @@ Follow these steps to get started:
 
 ### qBraid Lab
 
-Qiskit users can leverage qBraid’s preconfigured Python environments by following the instructions below. For more information, see the [qBraid Docs.](https://docs.qbraid.com/home/introduction)
+Qiskit users can use qBraid’s preconfigured Python environments by following these instructions. For more information, see the [qBraid Docs.](https://docs.qbraid.com/home/introduction)
 
 1. [Set up an qBraid free account.](https://docs.qbraid.com/home/account)
 3. [Create a Jupyter Lab Environment.](https://docs.qbraid.com/lab/user-guide/getting-started)
 3. Launch qBraid Lab, click the **ENVS** icon on the right, click **+ ADD** at the top of the new sidebar, search for Qiskit.  Click the version you want to use, then click **Install**.
-create a Jupyter notebook by clicking **Python 3 [Qiskit]** in the Notebook section.
+4. Create a Jupyter notebook by clicking **Python 3 [Qiskit]** in the Notebook section.
 4. You can install any additional Python packages (Such as Qiskit 1.2) in a notebook cell by running `%pip install [package_name].` For more information, see the [Pip (magic) commands](https://docs.qbraid.com/lab/user-guide/notebooks#pip-magic-commands) topic.
 
 ## Additional notebook environments for Qiskit users
