--- a/docs/guides/noise-learning.ipynb
+++ b/docs/guides/noise-learning.ipynb
@@ -7,12 +7,12 @@
    "source": [
     "# Noise learning helper\n",
     "\n",
-    "The error mitigation techniques [PEA](./error-mitigation-and-suppression-techniques#probabilistic-error-amplification-pea) and [PEC](./error-mitigation-and-suppression-techniques#probabilistic-error-cancellation-pec) both utilize a noise learning component based on a [Pauli-Lindblad noise model](https://arxiv.org/abs/2201.09866), which is typically managed during execution after submitting one or more jobs through `qiskit-ibm-runtime` without any local access to the fitted noise model. However as of `qiskit-ibm-runtime` 0.27.1, a [`NoiseLearner`](../api/qiskit-ibm-runtime/noise_learner) and associated  [`NoiseLearnerOptions`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.NoiseLearnerOptions) class have been created to obtain the results of these noise learning experiments. These results can then be stored locally as a `NoiseLearnerResult` and used as input in later experiments. This page provides an overview of its usage and the associated options available.\n",
+    "The error mitigation techniques [PEA](./error-mitigation-and-suppression-techniques#probabilistic-error-amplification-pea) and [PEC](./error-mitigation-and-suppression-techniques#probabilistic-error-cancellation-pec) both utilize a noise learning component based on a [Pauli-Lindblad noise model](https://arxiv.org/abs/2201.09866), which is typically managed during execution after submitting one or more jobs through `qiskit-ibm-runtime` without any local access to the fitted noise model. However, as of `qiskit-ibm-runtime` 0.27.1, a [`NoiseLearner`](../api/qiskit-ibm-runtime/noise_learner) and associated  [`NoiseLearnerOptions`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.NoiseLearnerOptions) class have been created to obtain the results of these noise learning experiments. These results can then be stored locally as a `NoiseLearnerResult` and used as input in later experiments. This page provides an overview of its usage and the associated options available.\n",
     "\n",
     "\n",
     "## Overview\n",
     "\n",
-    "The `NoiseLearner` class performs experiments which characterizes noise processes based on a Pauli-Lindblad noise model for one (or more) circuits. It possesses a `run()` method which will execute the learning experiments and takes as input either a list of circuits or a [PUB](./primitive-input-output#overview-of-pubs) and returns a `NoiseLearnerResult` containing the learned noise channels and metadata about the job(s) submitted. Below is a code snippet demonstrating the usage of the helper program."
+    "The `NoiseLearner` class performs experiments that characterize noise processes based on a Pauli-Lindblad noise model for one (or more) circuits. It possesses a `run()` method that executes the learning experiments and takes as input either a list of circuits or a [PUB](./primitive-input-output#overview-of-pubs), and returns a `NoiseLearnerResult` containing the learned noise channels and metadata about the job(s) submitted. Below is a code snippet demonstrating the usage of the helper program."
    ]
   },
   {
@@ -136,9 +136,9 @@
    "id": "a27a38f1-393d-49f9-92c3-a8634bfb1a60",
    "metadata": {},
    "source": [
-    "The `LayerError.error` attribute of the noise learning result contains the generators and error rates of the fitted Pauli Lindblad model, which has the form:\n",
+    "The `LayerError.error` attribute of the noise learning result contains the generators and error rates of the fitted Pauli Lindblad model, which has the form\n",
     "\n",
-    "$$ \\Lambda(\\rho) = \\exp{\\sum_j r_j \\left(P_j \\rho P_j^\\dagger - \\rho\\right)} $$\n",
+    "$$ \\Lambda(\\rho) = \\exp{\\sum_j r_j \\left(P_j \\rho P_j^\\dagger - \\rho\\right)}, $$\n",
     "\n",
     "where the $r_j$ are the `LayerError.rates` and $P_j$ are the Pauli operators specified in `LayerError.generators`."
    ]
@@ -150,7 +150,7 @@
    "source": [
     "## Noise learning options\n",
     "\n",
-    "There are a few options available to input into a `NoiseLearner` object when instantiated. These are encapsulated by the `qiskit_ibm_runtime.options.NoiseLearnerOptions` class and include the ability to specify the maximum layers to learn, number of randomizations, and the twirling strategy, among others. Refer to the API documentation about [`NoiseLearnerOptions`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.NoiseLearnerOptions) for more detailed information.\n",
+    "You can choose among several options to input when you instantiate a `NoiseLearner` object. These options are encapsulated by the `qiskit_ibm_runtime.options.NoiseLearnerOptions` class and include the ability to specify the maximum layers to learn, number of randomizations, and the twirling strategy, among others. Refer to the API documentation about [`NoiseLearnerOptions`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.NoiseLearnerOptions) for more detailed information.\n",
     "\n",
     "Below is a simple example showing how to use the `NoiseLearnerOptions` in a `NoiseLeaner` experiment:"
    ]
@@ -192,9 +192,9 @@
    "id": "694b0e38-7aeb-48e0-8598-b64cff395bc2",
    "metadata": {},
    "source": [
-    "## Input noise model to primitive\n",
+    "## Input noise model to a primitive\n",
     "\n",
-    "The noise model learned on the circuit can also be used as an input to the `EstimatorV2` primitive implemented in Qiskit IBM Runtime. This can be passed into the primitive a few different ways. For example, you can pass the noise model to the `estimator.options` attribute directly"
+    "The noise model learned on the circuit can also be used as an input to the `EstimatorV2` primitive implemented in Qiskit IBM Runtime. This can be passed into the primitive a few different ways. The next three examples show how you can pass the noise model to the `estimator.options` attribute directly, via a `ResilienceOptionsV2` object before instantiating an Estimator primitive, and by passing in an appropriately formatted dictionary."
    ]
   },
   {
@@ -204,16 +204,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pass the noise model to the `estimator.options` attribute directly\n",
     "estimator = EstimatorV2(mode=backend)\n",
     "estimator.options.resilience.layer_noise_model = noise_model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3892248e-5221-455d-ba74-e75ffb917a0e",
-   "metadata": {},
-   "source": [
-    "via a `ResilienceOptionsV2` object before instantiating an Estimator primitive"
    ]
   },
   {
@@ -227,14 +220,6 @@
     "resilience_options = ResilienceOptionsV2(layer_noise_model=noise_model)\n",
     "estimator_options = EstimatorOptions(resilience=resilience_options)\n",
     "estimator = EstimatorV2(mode=backend, options=estimator_options)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "199d18c8-5eba-44db-a6cf-a9a7a8018734",
-   "metadata": {},
-   "source": [
-    "or by passing in an appropriately formatted dictionary"
    ]
   },
   {
@@ -269,8 +254,8 @@
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "    - Read more about [configuring error mitigation](configure-error-mitigation).\n",
     "    - Review the [EstimatorOptions API reference](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions) and [ResilienceOptionsV2 API reference](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ResilienceOptionsV2).\n",
-    "    - Learn more about [error mitigation and suppression techniques](error-mitigation-and-suppression-techniques) that are available through Qiskit Runtime.\n",
-    "    - Review how to [specify options](specify-runtime-options) for the Qiskit Runtime primitives.\n",
+    "    - Learn more about [Error mitigation and suppression techniques](error-mitigation-and-suppression-techniques) that are available through Qiskit Runtime.\n",
+    "    - Review how to [Specify options](specify-runtime-options) for the Qiskit Runtime primitives.\n",
     "    - Read [Migrate to V2 primitives](/migration-guides/v2-primitives).\n",
     "</Admonition>"
    ]
