--- a/docs/guides/qiskit-addons.mdx
+++ b/docs/guides/qiskit-addons.mdx
@@ -9,9 +9,9 @@ Qiskit addons are a collection of modular tools for building utility-scale workl
 
 ## Mapping tools
 
-### Multiproduct formulas
+### Multi-product formulas
 
-Multiproduct formulas (MPF) reduce the Trotter error of Hamiltonian dynamics through a weighted combination of several circuit executions.
+Multi-product formulas (MPF) reduce the Trotter error of Hamiltonian dynamics through a weighted combination of several circuit executions.
 
 - Visit the [GitHub repository.](https://github.com/Qiskit/qiskit-addon-mpf)
 - Read the [documentation.](https://qiskit.github.io/qiskit-addon-mpf)
