Change links title

--- a/docs/guides/online-lab-environments.mdx
+++ b/docs/guides/online-lab-environments.mdx
@@ -41,7 +41,7 @@ Qiskit users can use qBraid’s preconfigured Python environments by following t
 
 ## Additional notebook environments for Qiskit users
 
-For platforms without Qiskit preconfigured, the setup instructions are similar, with the addition that you must install Qiskit manually. You will create an account, start a new project (or notebook or workspace, depending on the platform), and install Qiskit.
+For platforms without Qiskit preconfigured, the setup instructions are similar, except that you must install Qiskit manually. You will create an account, start a new project (or notebook or workspace, depending on the platform), and install Qiskit.
 
 ### IBM Watson Studio
 
@@ -71,7 +71,7 @@ For platforms without Qiskit preconfigured, the setup instructions are similar, 
     %pip install qiskit qiskit-ibm-runtime
    ```
 
-## Next steps
+## Helpful links
 
 <Admonition type="tip" title="Recommendations">
   -  [OVH Cloud documentation](https://help.ovhcloud.com/csm/en-documentation?id=kb_home)
