Move file in toc

--- a/docs/guides/online-lab-environments.mdx
+++ b/docs/guides/online-lab-environments.mdx
@@ -73,7 +73,7 @@ For platforms without Qiskit preconfigured, the setup instructions are similar, 
 
 ## Helpful links
 
-<Admonition type="tip" title="Recommendations">
+<Admonition type="tip" title="Documentation resources">
   -  [OVH Cloud documentation](https://help.ovhcloud.com/csm/en-documentation?id=kb_home)
   -  [qBraid Lab documentation](https://docs.qbraid.com/home/introduction)
   -  [IBM Watson studio documentation](https://dataplatform.cloud.ibm.com/docs/content/svc-welcome/wsl.html?context=cpdaas)
