--- a/docs/guides/configure-error-suppression.mdx
+++ b/docs/guides/configure-error-suppression.mdx
@@ -39,7 +39,7 @@ print(f">>> dynamical decoupling sequence to use: {sampler.options.dynamical_dec
 ```
 
 <CodeAssistantAdmonition>
-Can't remember the right attributes? Try asking the Qiskit Code Assistant!
+Can't remember the right attributes? Try asking the Qiskit Code Assistant.
 * `# Enable dynamic decoupling for sampler with the "XpXm" sequence type`
 </CodeAssistantAdmonition>
 
