--- a/docs/guides/transpile-with-pass-managers.ipynb
+++ b/docs/guides/transpile-with-pass-managers.ipynb
@@ -103,7 +103,7 @@
     "See [Transpilation defaults and configuration options](defaults-and-configuration-options) for a description of the possible arguments to the `generate_preset_pass_manager` function. The arguments to `generate_preset_pass_manager` match the arguments to the [`transpile`](/api/qiskit/compiler#qiskit.compiler.transpile) function.\n",
     "\n",
     "<CodeAssistantAdmonition>\n",
-    "Bad at remembering? Try asking the Qiskit Code Assistant.\n",
+    "Having trouble remembering pass manager details? Try asking the Qiskit Code Assistant.\n",
     "* `# Create a pass manager with the highest optimization level`\n",
     "* `# Transpile 'circuit' with the highest optimization level`\n",
     "</CodeAssistantAdmonition>\n",
