--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -472,7 +472,7 @@
    "id": "12c8acfd-d189-45b7-a372-10c48bb13687",
    "metadata": {},
    "source": [
-    "For Sampler jobs, you can also review the result metadata to understand when certain data was run; called the [_execution span._](monitor-job#execution-spans)"
+    "For Sampler jobs, you can also review the result metadata to understand when certain data was run; this is called the [_execution span._](monitor-job#execution-spans)"
    ]
   }
  ],
