go back to no hyphen

--- a/docs/guides/qiskit-addons.mdx
+++ b/docs/guides/qiskit-addons.mdx
@@ -1,13 +1,13 @@
 ---
-title: Qiskit add-ons
-description: Understand the Qiskit add-on tools, which help you build utility-grade quantum workflows.
+title: Qiskit addons
+description: Understand the Qiskit addon tools, which help you build utility-grade quantum workflows.
 ---
 
-# Qiskit add-ons
+# Qiskit addons
 
-Qiskit add-ons are a collection of modular tools for building utility-scale workloads powered by Qiskit. These tools are derived from advanced research capabilities and are designed to be stackable with other tools as part of a [Qiskit pattern.](./intro-to-patterns)
+Qiskit addons are a collection of research capabilities for enabling algorithm discovery at the utility scale. These capabilities build on Qiskit's performant foundation of tools for creating and running quantum algorithms. They are provided as modular software components that can plug into a [workflow](/guides/intro-to-patterns) to scale or design new quantum algorithms.
 
-## Mapping tools
+## Mapping addons
 
 ### Multi-product formulas
 
@@ -16,7 +16,7 @@ Multi-product formulas (MPF) reduce the Trotter error of Hamiltonian dynamics th
 - Visit the [GitHub repository.](https://github.com/Qiskit/qiskit-addon-mpf)
 - Read the [documentation.](https://qiskit.github.io/qiskit-addon-mpf)
 
-## Optimizing tools
+## Optimizing addons
 
 ### Operator backpropagation
 
@@ -27,16 +27,16 @@ Operator backpropagation (OBP) reduces circuit depth by trimming operations from
 
 ### Circuit cutting
 
-Circuit cutting reduces the depth of transpiled circuits by decomposing long range gates.
+Circuit cutting reduces the depth of transpiled circuits by decomposing entangling gates between non-adjacent qubits.
 
 - Visit the [GitHub repository.](https://github.com/Qiskit/qiskit-addon-cutting)
 - Read the [documentation.](https://qiskit.github.io/qiskit-addon-cutting)
 
-## Post-processing tools
+## Post-processing addons
 
 ### Sample-based quantum diagonalization
 
-Sample-based quantum diagonalization (SQD) classically postprocesses noisy quantum samples to yield more accurate energy estimations.
+Sample-based quantum diagonalization (SQD) classically postprocesses noisy quantum samples to yield more accurate energy estimations of quantum system Hamiltonians, for example in chemistry applications.
 
 - Visit the [GitHub repository.](https://github.com/Qiskit/qiskit-addon-sqd)
 - Read the [documentation.](https://qiskit.github.io/qiskit-addon-sqd)
