--- a/docs/migration-guides/local-simulators.mdx
+++ b/docs/migration-guides/local-simulators.mdx
@@ -63,7 +63,7 @@ use local testing mode, specify one of the fake backends in ``qiskit_ibm_runtime
 
 If you are perpelexed by the multiple choie of simulators, feel free to refer the following table as a guide to the applicablity of the simulators. 
 
-## Simulator Comparison Table
+### Simulator Comparison Table
 
 | Simulator           | Fake Backends                                   | AerSimulator                                       | Clifford Simulation                                |
 |---------------------|-------------------------------------------------|---------------------------------------------------|----------------------------------------------------|
