--- a/docs/migration-guides/local-simulators.mdx
+++ b/docs/migration-guides/local-simulators.mdx
@@ -75,7 +75,7 @@ If you are perpelexed by the multiple choie of simulators, feel free to refer th
 
 
 *Note: For most users, **AerSimulator** serves as a good default choice due to its flexibility and performance. However, if your work targets a specific QPU, please refer to the table 
-above.*
+above. For more information about the type of simulators and exmaples read below.*
 
 ### Fake backends
 
