Apply suggestions from code review
Co-authored-by: Jen Glick <41485571+jenglick@users.noreply.github.com>

--- a/docs/guides/qiskit-addons.mdx
+++ b/docs/guides/qiskit-addons.mdx
@@ -7,7 +7,7 @@ description: Understand the Qiskit addon tools, which help you build utility-gra
 
 Qiskit addons are a collection of research capabilities for enabling algorithm discovery at the utility scale. These capabilities build on Qiskit's performant foundation of tools for creating and running quantum algorithms. They are provided as modular software components that can plug into a [workflow](/guides/intro-to-patterns) to scale or design new quantum algorithms.
 
-## Mapping addons
+## Addons for mapping
 
 ### Multi-product formulas
 
@@ -16,7 +16,7 @@ Multi-product formulas (MPF) reduce the Trotter error of Hamiltonian dynamics th
 - Visit the [GitHub repository.](https://github.com/Qiskit/qiskit-addon-mpf)
 - Read the [documentation.](https://qiskit.github.io/qiskit-addon-mpf)
 
-## Optimizing addons
+## Addons for optimizing
 
 ### Operator backpropagation
 
@@ -32,7 +32,7 @@ Circuit cutting reduces the depth of transpiled circuits by decomposing entangli
 - Visit the [GitHub repository.](https://github.com/Qiskit/qiskit-addon-cutting)
 - Read the [documentation.](https://qiskit.github.io/qiskit-addon-cutting)
 
-## Post-processing addons
+##  Addons for post-processing
 
 ### Sample-based quantum diagonalization
 
