--- a/docs/guides/monitor-job.mdx
+++ b/docs/guides/monitor-job.mdx
@@ -55,9 +55,9 @@ In Qiskit, use `job.cancel()` to cancel a job.
 
 The results of [`SamplerV2`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.SamplerV2) jobs executed in Qiskit Runtime contain execution timing information in their metadata.
 This timing information can be used to place upper and lower timestamp bounds on when particular shots were executed on the QPU.
-Shots are grouped into `~.ExecutionSpan`s, each of which indicates a start time, a stop time, and a specification of which shots were collected in the span.
+Shots are grouped into `ExecutionSpan`s, each of which indicates a start time, a stop time, and a specification of which shots were collected in the span.
 
-An execution span specifies which data was executed during its window by providing an `~.ExecutionSpan.mask` method. This method, given any PUB index, returns a Boolean mask that is ``True`` for all shots executed during its window. PUBs are indexed by the order in which they were given to the Sampler run call. If, for example, a PUB has shape `(2, 3)` and was run with four shots, then the mask's shape is `(2, 3, 4)`.
+An execution span specifies which data was executed during its window by providing an `ExecutionSpan.mask` method. This method, given any PUB index, returns a Boolean mask that is `True` for all shots executed during its window. PUBs are indexed by the order in which they were given to the Sampler run call. If, for example, a PUB has shape `(2, 3)` and was run with four shots, then the mask's shape is `(2, 3, 4)`.
 
 ```python
 # Get the mask of the 1st PUB for the 0th span.
@@ -71,7 +71,7 @@ bits = pub_results[1].data.meas
 filtered_data = BitArray(bits.array[mask], bits.num_bits)
 ```
 
-To view execution span information, review the metadata of the result returned by `SamplerV2`, which comes in the form of an `~ExecutionSpans` object. This object is a list-like container containing subclass instances of `ExecutionSpan`s such as `SliceSpan`:
+To view execution span information, review the metadata of the result returned by `SamplerV2`, which comes in the form of an `ExecutionSpans` object. This object is a list-like container containing subclass instances of `ExecutionSpan`s such as `SliceSpan`:
 
 ```python
 pub_results = job.result()
