--- a/docs/api/qiskit/qiskit.circuit.library.Initialize.mdx
+++ b/docs/api/qiskit/qiskit.circuit.library.Initialize.mdx
@@ -8,7 +8,7 @@ python_api_name: qiskit.circuit.library.Initialize
 
 # Initialize
 
-<Class id="qiskit.circuit.library.Initialize" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/circuit/library/data_preparation/initializer.py#L32-L104" signature="qiskit.circuit.library.Initialize(params, num_qubits=None, normalize=False)" modifiers="class">
+<Class id="qiskit.circuit.library.Initialize" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/circuit/library/data_preparation/initializer.py#L33-L107" signature="qiskit.circuit.library.Initialize(params, num_qubits=None, normalize=False)" modifiers="class">
   Bases: [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
 
   Complex amplitude initialization.
@@ -136,7 +136,7 @@ python_api_name: qiskit.circuit.library.Initialize
 
   ### broadcast\_arguments
 
-  <Function id="qiskit.circuit.library.Initialize.broadcast_arguments" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/circuit/library/data_preparation/initializer.py#L103-L104" signature="broadcast_arguments(qargs, cargs)">
+  <Function id="qiskit.circuit.library.Initialize.broadcast_arguments" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/circuit/library/data_preparation/initializer.py#L106-L107" signature="broadcast_arguments(qargs, cargs)">
     Validation of the arguments.
 
     **Parameters**
@@ -155,16 +155,16 @@ python_api_name: qiskit.circuit.library.Initialize
 
   ### gates\_to\_uncompute
 
-  <Function id="qiskit.circuit.library.Initialize.gates_to_uncompute" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/circuit/library/data_preparation/initializer.py#L85-L91" signature="gates_to_uncompute()">
+  <Function id="qiskit.circuit.library.Initialize.gates_to_uncompute" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/circuit/library/data_preparation/initializer.py#L86-L94" signature="gates_to_uncompute()">
     Call to create a circuit with gates that take the desired vector to zero.
 
     **Returns**
 
-    Circuit to take `self.params` vector to $|{00\ldots0}\rangle$
+    circuit to take `self.params` vector to $|{00\ldots0}\rangle$
 
     **Return type**
 
-    [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")
+    [QuantumCircuit](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")
   </Function>
 </Class>
 
