--- a/docs/api/qiskit/qiskit.transpiler.passes.CollectCliffords.mdx
+++ b/docs/api/qiskit/qiskit.transpiler.passes.CollectCliffords.mdx
@@ -9,7 +9,7 @@ python_api_name: qiskit.transpiler.passes.CollectCliffords
 # CollectCliffords
 
 <Class id="qiskit.transpiler.passes.CollectCliffords" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/transpiler/passes/optimization/collect_cliffords.py#L28-L70" signature="qiskit.transpiler.passes.CollectCliffords(*args, **kwargs)" modifiers="class">
-  Bases: `CollectAndCollapse`
+  Bases: [`CollectAndCollapse`](qiskit.transpiler.passes.CollectAndCollapse "qiskit.transpiler.passes.optimization.collect_and_collapse.CollectAndCollapse")
 
   Collects blocks of Clifford gates and replaces them by a [`Clifford`](qiskit.quantum_info.Clifford "qiskit.quantum_info.Clifford") object.
 
