--- a/docs/api/qiskit/qiskit.transpiler.passes.Split2QUnitaries.mdx
+++ b/docs/api/qiskit/qiskit.transpiler.passes.Split2QUnitaries.mdx
@@ -8,18 +8,16 @@ python_api_name: qiskit.transpiler.passes.Split2QUnitaries
 
 # Split2QUnitaries
 
-<Class id="qiskit.transpiler.passes.Split2QUnitaries" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/transpiler/passes/optimization/split_2q_unitaries.py#L22-L83" signature="qiskit.transpiler.passes.Split2QUnitaries(*args, **kwargs)" modifiers="class">
+<Class id="qiskit.transpiler.passes.Split2QUnitaries" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/transpiler/passes/optimization/split_2q_unitaries.py#L22-L79" signature="qiskit.transpiler.passes.Split2QUnitaries(*args, **kwargs)" modifiers="class">
   Bases: [`TransformationPass`](qiskit.transpiler.TransformationPass "qiskit.transpiler.basepasses.TransformationPass")
 
-  Attempt to splits two-qubit gates in a [`DAGCircuit`](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit") into two single-qubit gates
+  Attempt to splits two-qubit unitaries in a [`DAGCircuit`](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit") into two single-qubit gates.
 
-  This pass will analyze all the two qubit gates in the circuit and analyze the gate’s unitary matrix to determine if the gate is actually a product of 2 single qubit gates. In these cases the 2q gate can be simplified into two single qubit gates and this pass will perform this optimization and will replace the two qubit gate with two single qubit [`UnitaryGate`](qiskit.circuit.library.UnitaryGate "qiskit.circuit.library.UnitaryGate").
-
-  Split2QUnitaries initializer.
+  This pass will analyze all [`UnitaryGate`](qiskit.circuit.library.UnitaryGate "qiskit.circuit.library.UnitaryGate") instances and determine whether the matrix is actually a product of 2 single qubit gates. In these cases the 2q gate can be simplified into two single qubit gates and this pass will perform this optimization and will replace the two qubit gate with two single qubit [`UnitaryGate`](qiskit.circuit.library.UnitaryGate "qiskit.circuit.library.UnitaryGate").
 
   **Parameters**
 
-  **fidelity** ([*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.12)")) – Allowed tolerance for splitting two-qubit unitaries and gate decompositions
+  **fidelity** – Allowed tolerance for splitting two-qubit unitaries and gate decompositions.
 
   ## Attributes
 
@@ -73,8 +71,12 @@ python_api_name: qiskit.transpiler.passes.Split2QUnitaries
 
   ### run
 
-  <Function id="qiskit.transpiler.passes.Split2QUnitaries.run" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/transpiler/passes/optimization/split_2q_unitaries.py#L41-L83" signature="run(dag)">
+  <Function id="qiskit.transpiler.passes.Split2QUnitaries.run" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/transpiler/passes/optimization/split_2q_unitaries.py#L39-L79" signature="run(dag)">
     Run the Split2QUnitaries pass on dag.
+
+    **Return type**
+
+    [*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.dagcircuit.DAGCircuit")
   </Function>
 
   ### update\_status
