--- a/docs/api/qiskit/qiskit.visualization.plot_coupling_map.mdx
+++ b/docs/api/qiskit/qiskit.visualization.plot_coupling_map.mdx
@@ -10,7 +10,7 @@ python_api_name: qiskit.visualization.plot_coupling_map
 
 # qiskit.visualization.plot\_coupling\_map
 
-<Function id="qiskit.visualization.plot_coupling_map" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/utils/lazy_tester.py#L951-L1117" signature="qiskit.visualization.plot_coupling_map(num_qubits, qubit_coordinates, coupling_map, figsize=None, plot_directed=False, label_qubits=True, qubit_size=None, line_width=4, font_size=None, qubit_color=None, qubit_labels=None, line_color=None, font_color='white', ax=None, filename=None)">
+<Function id="qiskit.visualization.plot_coupling_map" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/utils/lazy_tester.py#L952-L1139" signature="qiskit.visualization.plot_coupling_map(num_qubits, qubit_coordinates, coupling_map, figsize=None, plot_directed=False, label_qubits=True, qubit_size=None, line_width=4, font_size=None, qubit_color=None, qubit_labels=None, line_color=None, font_color='white', ax=None, filename=None, *, planar=True)">
   Plots an arbitrary coupling map of qubits (embedded in a plane).
 
   **Parameters**
@@ -30,6 +30,7 @@ python_api_name: qiskit.visualization.plot_coupling_map
   *   **font\_color** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")) – The font color for the qubit labels.
   *   **ax** (*Axes*) – A Matplotlib axes instance.
   *   **filename** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")) – file path to save image to.
+  *   **planar** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")) – If the coupling map is planar or not. Default: `True` (i.e. it is planar)
 
   **Returns**
 
