--- a/docs/api/qiskit/release-notes/1.2.mdx
+++ b/docs/api/qiskit/release-notes/1.2.mdx
@@ -14,9 +14,53 @@ in_page_toc_max_heading_level: 3
 
 <span id="id1" />
 
+## 1.2.1
+
+<span id="relnotes-1-2-1-prelude" />
+
+### Prelude
+
+Qiskit 1.2.1 is a minor bugfix release for the 1.2 series.
+
+<span id="relnotes-1-2-1-bug-fixes" />
+
+### Bug Fixes
+
+*   Fixed an issue with the visualizations of some backends/coupling maps that showed as folded on their own. The default \`\`neato\` setting \<[https://graphviz.org/docs/layouts/neato/](https://graphviz.org/docs/layouts/neato/)>\`\_ works well in most cases. However, `prism` overlap returns a more regular layout for other scenarios.
+
+*   Parametric controlled standard-library gates (such as [`CRXGate`](/api/qiskit/qiskit.circuit.library.CRXGate "qiskit.circuit.library.CRXGate")) will now get correctly extracted to a Rust-space standard gate when using [`QuantumCircuit.append()`](/api/qiskit/qiskit.circuit.QuantumCircuit#append "qiskit.circuit.QuantumCircuit.append") and the gate object. Previously there was a discrepancy where using the [`QuantumCircuit.crx()`](/api/qiskit/qiskit.circuit.QuantumCircuit#crx "qiskit.circuit.QuantumCircuit.crx") method would cause a correct extraction in Rust space, but the `append()` form would not. The bug should generally not have caused any unsoundness from Python.
+
+*   Fixed a bug in [`TwoQubitBasisDecomposer`](/api/qiskit/qiskit.synthesis.TwoQubitBasisDecomposer "qiskit.synthesis.TwoQubitBasisDecomposer") where the Rust-based code would panic if the given KAK gate was not a default version of the standard gates (for example, using `CXGate(ctrl_state=0)`). Fixed [#12998](https://github.com/Qiskit/qiskit/issues/12998).
+
+*   Fixed a bug where [`InstructionDurations.from_backend()`](/api/qiskit/qiskit.transpiler.InstructionDurations#from_backend "qiskit.transpiler.InstructionDurations.from_backend") did not work for [`BackendV2`](/api/qiskit/qiskit.providers.BackendV2 "qiskit.providers.BackendV2") backends. Fixed [#12760](https://github.com/Qiskit/qiskit/issues/12760).
+
+*   Fixed the definition of the [`CUGate`](/api/qiskit/qiskit.circuit.library.CUGate "qiskit.circuit.library.CUGate") matrix in Rust-space. While this was not noticable when handling the [`CUGate`](/api/qiskit/qiskit.circuit.library.CUGate "qiskit.circuit.library.CUGate") purely on the Python side, this had knock-on effects when transpiler passes were using the Rust representation, such as could happen in `Consolidate2qBlocks`. Fixed [#13118](https://github.com/Qiskit/qiskit/issues/13118).
+
+*   Fixed a bug in [`HoareOptimizer`](/api/qiskit/qiskit.transpiler.passes.HoareOptimizer "qiskit.transpiler.passes.HoareOptimizer") where a controlled gate was simplified by removing its controls but the new gate was not handled correctly. Fixed [#13079](https://github.com/Qiskit/qiskit/issues/13079).
+
+*   [`generate_preset_pass_manager()`](/api/qiskit/transpiler_preset#qiskit.transpiler.preset_passmanagers.generate_preset_pass_manager "qiskit.transpiler.preset_passmanagers.generate_preset_pass_manager") now correctly raises an exception, if `seed_transpiler` is set to an invalid value (i.e., it is not a non-negative integer). Fixed [#12938](https://github.com/Qiskit/qiskit/issues/12938).
+
+*   Fixed an edge case in [`SabreLayout`](/api/qiskit/qiskit.transpiler.passes.SabreLayout "qiskit.transpiler.passes.SabreLayout"), where, in rare cases on large devices and challenging circuits, the routing would fail. This was due to the release valve making more than one two-qubit gate routable, where only one was expected. Fixed [#13081](https://github.com/Qiskit/qiskit/issues/13081).
+
+*   Fixed a bug in [`Split2QUnitaries`](/api/qiskit/qiskit.transpiler.passes.Split2QUnitaries "qiskit.transpiler.passes.Split2QUnitaries") where it would fail to run on circuits with custom [`Gate`](/api/qiskit/qiskit.circuit.Gate "qiskit.circuit.Gate") objects that did not implement `__array__`. See [#12970](https://github.com/Qiskit/qiskit/issues/12970).
+
+*   Fixed a bug in [`StatePreparation`](/api/qiskit/qiskit.circuit.library.StatePreparation "qiskit.circuit.library.StatePreparation") where the `normalize` argument was ignored for input arrays. Fixed [#12984](https://github.com/Qiskit/qiskit/issues/12984).
+
+*   Fixed a bug where various synthesis methods created circuits without quantum or classical registers. This also affected functions that internally used the synthesis methods, such as [`Clifford.to_circuit()`](/api/qiskit/qiskit.quantum_info.Clifford#to_circuit "qiskit.quantum_info.Clifford.to_circuit"). While the circuits were valid, this could cause issues when comparing circuits with registers. Fixed [#13041](https://github.com/Qiskit/qiskit/issues/13041).
+
+*   Fixed a bug that caused the method [`Initialize.gates_to_uncompute()`](/api/qiskit/qiskit.circuit.library.Initialize#gates_to_uncompute "qiskit.circuit.library.Initialize.gates_to_uncompute") fail. Fixed [#12969](https://github.com/Qiskit/qiskit/issues/12969).
+
+*   Fixed an edge case when transpiling a circuit with `optimization_level` 2 or 3 with an incomplete 1-qubit basis gate set on a circuit containing 2-qubit gates, that can be implemented as a product of single qubit gates. This bug is resolved by restricting [`Split2QUnitaries`](/api/qiskit/qiskit.transpiler.passes.Split2QUnitaries "qiskit.transpiler.passes.Split2QUnitaries") to consider only [`UnitaryGate`](/api/qiskit/qiskit.circuit.library.UnitaryGate "qiskit.circuit.library.UnitaryGate") objects. Fixed [#12970](https://github.com/Qiskit/qiskit/issues/12970).
+
+<span id="relnotes-1-2-0" />
+
+<span id="id2" />
+
 ## 1.2.0
 
 <span id="relnotes-1-2-0-prelude" />
+
+<span id="id3" />
 
 ### Prelude
 
@@ -381,6 +425,8 @@ The Qiskit 1.2.0 release focuses mainly on improving performance and quality of 
 *   The [`visualize_transition()`](/api/qiskit/qiskit.visualization.visualize_transition "qiskit.visualization.visualize_transition") function has been deprecated and will be removed in the 2.0.0 release. This function had a number of limitations which limited its utility to only very specific use cases and did not fit in with the rest of the Qiskit visualization module.
 
 <span id="relnotes-1-2-0-bug-fixes" />
+
+<span id="id4" />
 
 ### Bug Fixes
 
