--- a/docs/migration-guides/local-simulators.mdx
+++ b/docs/migration-guides/local-simulators.mdx
@@ -73,7 +73,9 @@ If you are perpelexed by the multiple choie of simulators, feel free to refer th
 | **Use Case**        | Testing transpiler and QPU-specific behavior     | General development, custom noise models          | Large stabilizer circuits, error correction        |
 
 
-*Note: For most users, **AerSimulator** serves as a good default choice due to its flexibility and performance. However, if your work targets a specific QPU, please refer to the table 
+<Admonition type="note">
+For most users, `AerSimulator` is a good choice, due to its flexibility and performance. However, if your work targets a specific QPU, refer to the above table to determine which simulator to use.
+</Admonition>
 above. For more information about the type of simulators and exmaples read below.*
 
 ### Fake backends
