--- a/docs/migration-guides/local-simulators.mdx
+++ b/docs/migration-guides/local-simulators.mdx
@@ -60,7 +60,7 @@ With `qiskit-ibm-runtime` 0.22.0 or later, you can use local testing mode to rep
 
 ### Guidance for choosing a simulator
 
-If you are perpelexed by the multiple choie of simulators, feel free to refer the following table as a guide to the applicablity of the simulators. 
+Use the following table to help choose a simulator.
 
 ### Simulator Comparison Table
 
