--- a/docs/guides/qiskit-code-assistant.mdx
+++ b/docs/guides/qiskit-code-assistant.mdx
@@ -1,6 +1,6 @@
 ---
 title: Qiskit Code Assistant
-description: Improve your quantum computing developer experience and learn best practices for Qiskit and IBM Quantum Platform services with Qiskit Code Assistant
+description: Learn how to use Qiskit Code Assistant, a generative AI code assistant.
 ---
 
 # Qiskit Code Assistant
