Adding details about how to setup the IQP token

--- a/docs/guides/qiskit-code-assistant-jupyterlab.mdx
+++ b/docs/guides/qiskit-code-assistant-jupyterlab.mdx
@@ -40,7 +40,7 @@ For help working with JupyterLab, refer to the [JupyterLab documentation.](https
 
 ### Authentication and setup
 
-After installing the extension in VSCode or JupyterLab, the extension will try to authenticate you. By default, the package tries to authenticate to IBM Quantum services with the defined Qiskit API token, and uses your token from the `QISKIT_IBM_TOKEN` environment variable or from the file `~/.qiskit/qiskit-ibm.json` (under the section `default-ibm-quantum`).
+After installing the extension in VSCode or JupyterLab, the extension will try to authenticate you. By default, the package tries to authenticate to IBM Quantum services with the defined Qiskit API token, and uses your token from the `QISKIT_IBM_TOKEN` environment variable or from the file `~/.qiskit/qiskit-ibm.json` (under the section `default-ibm-quantum`). If you need help configuring your account, check out [the related guide](https://docs.quantum.ibm.com/guides/setup-channel#set-up-to-use-ibm-quantum-platform).
 
 By default, the extension will use the `granite-8b-qiskit` model. It will appear in the Model Picker in the bottom status bar.
 
